--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Siddharth-Tumre.github.io/my-app",
+  "homepage": "https://Siddharth-Tumre.github.io/CodaGlobalFrontEndChallenge",
   "name": "project",
   "version": "0.1.0",
   "private": true,
